:sparkles: favourites: add favourites index
